--- a/.github/workflows/refresh.yml
+++ b/.github/workflows/refresh.yml
@@ -2,7 +2,6 @@ name: Refresh jobs data
 
 on:
   schedule:
-    # Every 3 hours (UTC)
     - cron: "0 */3 * * *"
   workflow_dispatch:
 
@@ -13,11 +12,9 @@ jobs:
   refresh:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
