--- a/.github/workflows/refresh.yml
+++ b/.github/workflows/refresh.yml
@@ -27,6 +27,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install playwright
+          python -m playwright install --with-deps chromium
 
       - name: Run pipeline
         run: |
@@ -39,4 +41,3 @@ jobs:
           git add data/jobs.sqlite
           git commit -m "Auto refresh: jobs data" || echo "No changes to commit"
           git push
-
